Revision history for {{$dist->name}}

{{$NEXT}}

1.000024  2014-06-03 01:52:46Z
  - fix inaccurate prerequisite declaration on Test::More (in 1.000023)

1.000023  2014-06-02 02:37:17Z
  - support installations on older perls with an ExtUtils::MakeMaker earlier
    than 6.63_03

1.000022 - 2014-04-29
  - work around change in comparison behaviour in Test::More 0.95_01 by being
    more explicit with our tests - now explicitly checking the string form of
    the extracted version, rather than the entire version object
  - ensure the extracted version is returned as a version object in all cases
    (RT#87782, Randy Stauner)

1.000021 - 2014-04-29
  - fix use of newer interface from File::Path, to avoid another prereq on
    older perls (Graham Knop, PR#7)
  - fixed all out of date prereq declarations

1.000020 - 2014-04-27
  - new is_indexable() object method (ether, RT#84357)
  - eliminated dependency on IO::File (and by virtue, XS) - thanks, leont!
  - removed cruft in test infrastructure left behind from separation from
    Module::Build (ether)
  - repository moved to https://github.com/Perl-Toolchain-Gang/Module-Metadata
  - .pm file is now wholly ascii, for nicer fatpacking (RT#95086)
  - some code micro-optimizations (Olivier Mengué, PR#4)

1.000019 - 2013-10-06
  - warnings now disabled inside during the evaluation of generated version
    sub (BinGOs, RT#89282)

1.000018 - 2013-09-11
  - re-release of detainting fix without unstated non-core test dependencies

1.000017 - 2013-09-10
  - detaint version, if needed (RT#88576, Chris Williams)

1.000016 - 2013-08-21
  - Re-release to fix prereqs and other metadata

1.000015 - 2013-08-21
  - Change wording about safety/security to satisfy CVE-2013-1437

1.000014 - 2013-05-09
  - Remove "now installs to 'site' for perl 5.12+" from last version

1.000013 - 2013-05-08
  - Fix reliance on recent Test::Builder
  - Make tests perl 5.6 compatible
  - now installs to 'site' for perl 5.12+, as per p5p recommendation
